@@ -11,7 +11,7 @@ CRT0		 DESTDIR/lib/target/zx/classic/spec_crt0
 
 # Any default options you want - these are options to zcc which are fed
 # through to compiler, assembler etc as necessary
-OPTIONS		 -O2 -SO2 -iquote. -DZ80 -DSPECTRUM -D__SPECTRUM__ -D__TS2068__ -M -subtype=default -clib=default -Cc-standard-escape-chars -IDESTDIR/include/arch/ts2068
+OPTIONS		 -O2 -SO2 -iquote. -DZ80 -DSPECTRUM -D__SPECTRUM__ -D__TS2068__ -M -subtype=default -clib=default -Cc-standard-escape-chars -IDESTDIR/include/arch/ts2068 -Ca-D__TS2068__ -Cl-D__TS2068__
 
 CLIB      default -lts2068_clib -lndos -LDESTDIR/lib/clibs/z80
 CLIB      ansi -pragma-need=ansiterminal -D__CONIO_VT100 -lts2068_clib -lndos -pragma-define:ansipixels=512 -LDESTDIR/lib/clibs/z80
