@@ -13,6 +13,7 @@ Detailed but incomplete changelist:
 - [classic] MBF32 8085 and Z80 instruction optimisation
 - [classic] sccz80 8080, 8085, gbz80 l_ primitive reentrancy
 - [classic] +cpc: Screen driver fixes
+- [classic] +cpc: Banking support
 - [classic] +cpm: Amstrad, Televideo, Bondwell disc creation
 - [classic] +cpm: support for Bondwell 2 console and graphics
 - [classic] +cpm: Amstrad PCW Graphics library
